--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinanceTracker">
         <activity
+            android:name=".presentation.chart.ChartActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.splash.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +24,7 @@
         </activity>
         <activity
             android:name=".presentation.home.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
