--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,5 +101,6 @@ dependencies {
     //circle imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-
+    //swipe refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
